--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "handlebars": "^4.7.7",
     "hbs": "^4.1.2",
+    "nodemailer": "^6.6.2",
     "path": "^0.12.7",
     "request": "^2.88.2"
   }
